--- a/res/themes/dark/css/_dark.scss
+++ b/res/themes/dark/css/_dark.scss
@@ -191,7 +191,7 @@ $message-action-bar-hover-border-color: $header-panel-text-primary-color;
 $reaction-row-button-bg-color: $header-panel-bg-color;
 $reaction-row-button-border-color: #616b7f;
 $reaction-row-button-hover-border-color: $header-panel-text-primary-color;
-$reaction-row-button-selected-bg-color: #1f6954;
+$reaction-row-button-selected-bg-color: #006997;
 $reaction-row-button-selected-border-color: $accent-color;
 
 $kbd-border-color: #000000;
